fix spacing between checkbox and label

--- a/web/css/util.css
+++ b/web/css/util.css
@@ -199,3 +199,7 @@ button[data-tooltip] {
   display: table;
   clear: both;
 }
+
+input[type="checkbox"] {
+  margin: 3px 0.5ex;
+}
